# routes/web.php
@@ -7,6 +7,7 @@ use App\Http\Controllers\Admin\ComissionsController;
 use App\Http\Controllers\Admin\CouncilDecisionsController;
 use App\Http\Controllers\Admin\GeneralInfosController;
 use App\Http\Controllers\Admin\GovernmentsController;
+use App\Http\Controllers\Admin\InformationsController;
 use App\Http\Controllers\Admin\MeetingsController;
 use App\Http\Controllers\Admin\SenatorsController;
 use Illuminate\Support\Facades\Route;
@@ -141,6 +142,8 @@ Route::middleware(['auth'])->prefix('admin')->name('admin.')->group(function(){
 
     Route::resource('senators', SenatorsController::class);
     Route::resource('council-decisions', CouncilDecisionsController::class);
+
+    Route::resource('informations', InformationsController::class);
 
     Route::resource('settings', 'App\Http\Controllers\Admin\SettingsController');
     Route::get('generator', ['uses' => '\Appzcoder\LaravelAdmin\Controllers\ProcessController@getGenerator'])->name('generator');
